apps/goatlint/src/lsp/snapshots/fixtures_lsp_issue_14565@foo-bar.astro.snap
---
source: apps/goatlint/src/lsp/tester.rs
---
########## 
Linted file: fixtures/lsp/issue_14565/foo-bar.astro
----------
########## Diagnostic Reports
File URI: file://<variable>/fixtures/lsp/issue_14565/foo-bar.astro

code: "eslint-plugin-unicorn(filename-case)"
code_description.href: "https://goatlint.dev/docs/guide/usage/linter/rules/unicorn/filename-case.html"
message: "Filename should be in snake_case, or PascalCase\nhelp: Rename the file to 'foo_bar.astro', or 'FooBar.astro'"
range: Range { start: Position { line: 0, character: 3 }, end: Position { line: 0, character: 3 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/lsp/issue_14565/foo-bar.astro"
related_information[0].location.range: Range { start: Position { line: 0, character: 3 }, end: Position { line: 0, character: 3 } }
severity: Some(Error)
source: Some("goat")
tags: None

########### Code Actions/Commands

########### Fix All Action
None
